kube/services.yaml
kind: Service
apiVersion: v1
metadata:
  name: node-app-np
spec:
  type: NodePort
  selector:
    app: node-app
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
    - name: https
      protocol: TCP
      port: 443
      targetPort: 3001
---
kind: Service
apiVersion: v1
metadata:
  name: api-v1-np
spec:
  type: NodePort
  selector:
    app: api-v1
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
    - name: https
      protocol: TCP
      port: 443
      targetPort: 3001
